[added] added nessary content to structure the web

--- a/index.html
+++ b/index.html
@@ -33,17 +33,8 @@
     <header>
       <div class="wrapper">
         <div class="header-content">
-          <a href="/" id="logo" aria-label="logo">
-            <!-- <img src="./images/resume-logo.png" alt="resume" /> -->
-            RESUME
-          </a>
-          <nav id="navigation-bar">
-            <!-- <ul id="navigation-list">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Resume</a></li>
-              <li><a href="#">About</a></li>
-            </ul> -->
-          </nav>
+          <a href="/" id="logo" aria-label="logo"> RESUME </a>
+          <nav id="navigation-bar"></nav>
         </div>
       </div>
     </header>
@@ -51,7 +42,7 @@
       <section id="root-content"></section>
     </main>
     <footer>
-      <h2 style="text-align: center">Made By Adarsh Maharjan</h2>
+      <h2>Made By Adarsh Maharjan</h2>
     </footer>
     <script type="module" src="./main.js"></script>
     <!-- <script nomodule></script> -->
