[updated] updated logo link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
       <div class="wrapper">
         <div class="header-content">
-          <a href="/" id="logo" aria-label="logo"> RESUME </a>
+          <a href="#" id="logo" aria-label="logo"> RESUME </a>
           <nav id="navigation-bar"></nav>
         </div>
       </div>
