--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume Builder</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./file-regular.svg" />
     <!-- google-fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +25,7 @@
     <!-- shared -->
     <link rel="stylesheet" href="./css/shared.css" />
     <!-- Styles -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <!-- responsive -->
     <link rel="stylesheet" href="./css/responsive.css" />
   </head>
